Use padding instead of margin for space below pagination to fix Edge (browser) spacing

--- a/ui/src/App/Team/Archives/ThoughtArchives/ArchivedBoardsList/ArchivedBoardsList.scss
+++ b/ui/src/App/Team/Archives/ThoughtArchives/ArchivedBoardsList/ArchivedBoardsList.scss
@@ -20,7 +20,7 @@
 .archived-boards-list {
 	@include main.site-max-width;
 	max-width: 46.75rem;
-	margin: 0 auto 3.125rem;
+	padding: 3.125rem;
 
 	.thoughts-archive-title {
 		display: flex;
